# async-first

./: Cargo.toml  LICENSE  make.toml
src/: lib.rs
src/platform/: mod.rs  native.rs  wasm.rs  wasm_fns.rs  wasm_run.rs
www/: css.css  index.html
