[package]
name = "async_first"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple app that loads files asynchronously on desktop and web"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main"

[dependencies]
console_error_panic_hook = "0.1.7"
egui = { path = "../egui/crates/egui" }
egui_glow = { path = "../egui/crates/egui_glow", features = ["winit"] }
glow = "0.12.0"
lazy_static = "1.4.0"
rfd = "0.11.1"
winit = "0.28.1"

[target.'cfg(not(target_family="wasm"))'.dependencies]
glutin = "0.30.3"
glutin-winit = "0.3.0"
futures = { version = "0.3.26", features = ["std", "async-await", "executor", "thread-pool"] }
raw-window-handle = "0.5.0"


[target.'cfg(target_family="wasm")'.dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = ["Document", "Window", "Text", "console", "HtmlCanvasElement"] }
wasm-bindgen-futures = "0.4.34"
base64 = "0.21.0"
percent-encoding = "2.2.0"
